# tinyx

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  loc.sh
Xext/: Makefile.am  bigreq.c  dpms.c  dpmsproc.h  saver.c  shape.c  shm.c  shmint.h  sleepuntil.c  sync.c  xcmisc.c  xf86bigfont.c  xres.c  xtest.c
damageext/: damageext.c  damageextint.h
dbe/: Makefile.am  dbe.c  dbestruct.h  midbe.c  midbe.h  midbestr.h
dix/: Makefile.am  atom.c  colormap.c  cursor.c  devices.c  dispatch.c  dispatch.h  dixfonts.c  dixutils.c  events.c  extension.c  ffs.c  gc.c  globals.c  glyphcurs.c  grabs.c  initatoms.c  main.c  pixmap.c  privates.c  property.c  resource.c  strcasecmp.c  swaprep.c  swapreq.c  tables.c  window.c
fb/: Makefile.am  fb.h  fb24_32.c  fb24_32.h  fballpriv.c  fbarc.c  fbbits.c  fbbits.h  fbblt.c  fbbltone.c  fbcmap.c  fbcompose.c  fbcopy.c  fbedge.c  fbedgeimp.h  fbfill.c  fbfillrect.c  fbfillsp.c  fbgc.c  fbgetsp.c  fbglyph.c  fbimage.c  fbline.c  fboverlay.c  fboverlay.h  fbpict.c  fbpict.h  fbpixmap.c  fbpoint.c  fbpush.c  fbrop.h  fbscreen.c  fbseg.c  fbsetsp.c  fbsolid.c  fbstipple.c  fbtile.c  fbtrap.c  fbutil.c  fbwindow.c
include/: Makefile.am  closure.h  colormap.h  colormapst.h  cursor.h  cursorstr.h  dix-config.h.in  dix.h  dixevents.h  dixfont.h  dixgrabs.h  dixstruct.h  exevents.h  extension.h  extinit.h  extnsionst.h  gc.h  gcstruct.h  globals.h  input.h  inputstr.h  kdrive-config.h.in  misc.h  miscstruct.h  opaque.h  os.h  pixmap.h  pixmapstr.h  property.h  propertyst.h  region.h  regionstr.h  resource.h  screenint.h  scrnintstr.h  selection.h  servermd.h  site.h  swaprep.h  swapreq.h  (+3 more)
kdrive/: Makefile.am
kdrive/fbdev/: Makefile.am  fbdev.c  fbdev.h  fbinit.c
kdrive/linux/: Makefile.am  keyboard.c  linux.c  mouse.c
kdrive/src/: Makefile.am  kcmap.c  kdrive.c  kdrive.h  kinfo.c  kinput.c  kkeymap.h  kmap.c  kmode.c  kshadow.c
kdrive/vesa/: Makefile.am  vbe.c  vbe.h  vesa.c  vesa.h  vesainit.c  vga.c  vga.h  vm86.c  vm86.h
mi/: Makefile.am  mi.h  miarc.c  mibank.c  mibitblt.c  micmap.c  micmap.h  micursor.c  midash.c  midispcur.c  mieq.c  miexpose.c  mifillarc.c  mifillrct.c  mifpoly.h  mifpolycon.c  migc.c  miglblt.c  miinitext.c  miline.h  mipointer.c  mipointer.h  mipointrst.h  mipoly.c  mipoly.h  mipolycon.c  mipolygen.c  mipolypnt.c  mipolyrect.c  mipolyseg.c  mipolytext.c  mipolyutil.c  mipushpxl.c  miregion.c  miscanfill.h  miscrinit.c  mispans.c  mispans.h  misprite.c  misprite.h  (+10 more)
miext/: Makefile.am
miext/damage/: Makefile.am  damage.c  damage.h  damagestr.h
miext/shadow/: Makefile.am  shadow.c  shadow.h  shalloc.c  shpacked.c  shplanar.c  shplanar8.c  shrot16pack.c  shrot16pack_180.c  shrot16pack_270.c  shrot16pack_270YX.c  shrot16pack_90.c  shrot16pack_90YX.c  shrot32pack.c  shrot32pack_180.c  shrot32pack_270.c  shrot32pack_90.c  shrot8pack.c  shrot8pack_180.c  shrot8pack_270.c  shrot8pack_90.c  shrotate.c  shrotpack.h  shrotpackYX.h
os/: Makefile.am  WaitFor.c  access.c  auth.c  connection.c  io.c  log.c  mitauth.c  oscolor.c  osdep.h  osinit.c  strlcat.c  strlcpy.c  utils.c  xauembed.c  xdmauth.c  xdmcp.c  xstrans.c
randr/: Makefile.am  mirandr.c  randr.c  randrstr.h  rrcrtc.c  rrdispatch.c  rrinfo.c  rrmode.c  rroutput.c  rrpointer.c  rrproperty.c  rrscreen.c  rrsdispatch.c  rrxinerama.c
render/: Makefile.am  animcur.c  filter.c  glyph.c  glyphstr.h  miglyph.c  miindex.c  mipict.c  mipict.h  mirect.c  mitrap.c  mitri.c  picture.c  picture.h  picturestr.h  render.c  renderedge.c  renderedge.h
xfixes/: cursor.c  region.c  saveset.c  select.c  xfixes.c  xfixes.h  xfixesint.h
