AM_CFLAGS = $(DIX_CFLAGS)

EXTRA_DIST = do-not-use-config.h dix-config.h \
	closestr.h closure.h colormap.h colormapst.h cursor.h cursorstr.h \
	dix-config.h dix-config.h.in dixevents.h dixfont.h dixfontstr.h dixgrabs.h \
	dix.h dixstruct.h do-not-use-config.h do-not-use-config.h.in exevents.h \
	extension.h extinit.h extnsionst.h gc.h gcstruct.h globals.h input.h \
	inputstr.h kdrive-config.h kdrive-config.h.in \
	misc.h miscstruct.h opaque.h os.h pixmap.h \
	pixmapstr.h property.h propertyst.h region.h regionstr.h resource.h \
	screenint.h scrnintstr.h selection.h servermd.h site.h \
	swaprep.h swapreq.h validate.h window.h windowstr.h xfont2_compat.h
