noinst_LTLIBRARIES = libminimi.la libmi.la

AM_CFLAGS = $(DIX_CFLAGS)

# libminimi is for dmx - it has different defines for miinitext.c
libminimi_la_SOURCES = 	\
	mi.h		\
	miarc.c		\
	mibank.c	\
	mibank.h	\
	mibitblt.c	\
	micmap.c	\
	micmap.h	\
	micoord.h	\
	micursor.c	\
	midash.c	\
	midispcur.c	\
	mieq.c		\
	miexpose.c	\
	mifillarc.c	\
	mifillarc.h	\
	mifillrct.c	\
	mifpolycon.c	\
	mifpoly.h	\
	migc.c		\
	migc.h		\
	miglblt.c	\
	miline.h	\
	mipointer.c	\
	mipointer.h	\
	mipointrst.h	\
	mipoly.c	\
	mipoly.h	\
	mipolycon.c	\
	mipolygen.c	\
	mipolypnt.c	\
	mipolyrect.c	\
	mipolyseg.c	\
	mipolytext.c	\
	mipolyutil.c	\
	mipushpxl.c	\
	miregion.c	\
	miscanfill.h	\
	miscrinit.c	\
	mispans.c	\
	mispans.h	\
	misprite.c	\
	misprite.h	\
	mispritest.h	\
	mistruct.h	\
	mivaltree.c	\
	mivalidate.h	\
	miwideline.c	\
	miwideline.h	\
	miwindow.c	\
	mizerarc.c	\
	mizerarc.h	\
	mizerclip.c	\
	mizerline.c

libmi_la_SOURCES = $(libminimi_la_SOURCES)
