noinst_LTLIBRARIES = librender.la

AM_CFLAGS = $(DIX_CFLAGS)

librender_la_SOURCES =	\
	animcur.c	\
	filter.c	\
	glyph.c		\
	glyphstr.h	\
	miglyph.c	\
	miindex.c	\
	mipict.c	\
	mipict.h	\
	mirect.c	\
	mitrap.c	\
	mitri.c		\
	picture.c	\
	picture.h	\
	picturestr.h	\
	render.c	\
	renderedge.c	\
	renderedge.h
